# salary-calclate

./: .env  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/models/: __init__.py  mixins.py  users.py
backend/db/: alembic.ini  seed.py
backend/db/migration/: env.py
backend/src/: main.py
frontend/: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
