[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Toshichika Mashimo <mashita1023@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.88.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.20.0"
black = "^23.0.0"
mypy = "^0.991"
isort = "^5.10.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
