[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Mashimo <mashita1023@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.15.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pre-commit = "^2.20.0"
black = "^22.10.0"
mypy = "^0.991"
isort = "^5.10.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
